module(
    name = "symbol_finder",
    version = "1.0.0",
)

bazel_dep(name = "llvm-project", version = "17.0.3.bcr.4")
bazel_dep(name = "rules_cc", version = "0.1.2")

# Use clang toolchain as it can best deal with its own code.
bazel_dep(name = "toolchains_llvm", version = "1.3.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
